--- a/src/main/resources/templates/admin/info/list.html
+++ b/src/main/resources/templates/admin/info/list.html
@@ -5,10 +5,10 @@
       layout:decorate="~{fragments/layout}">
 <body>
 <main class="flex-grow-1 px-4 py-4" layout:fragment="content">
-    <div class="container-fluid col-md-10">
-        <h2>대시보드</h2>
-        <p>여기에 콘텐츠가 들어갑니다.</p>
-    </div>
+  <div class="container-fluid col-md-10">
+    <h2>Admin Info list</h2>
+    <p>Admin Info list 페이지 입니다.</p>
+  </div>
 </main>
 </body>
 </html>
