--- a/src/main/resources/templates/config/logList.html
+++ b/src/main/resources/templates/config/logList.html
@@ -4,9 +4,11 @@
       lang="ko"
       layout:decorate="~{fragments/layout}">
 <body>
-<div layout:fragment="content">
-  <h2>E-commerce</h2>
-  <p>E-commerce 페이지 입니다.</p>
-</div>
+<main class="flex-grow-1 px-4 py-4" layout:fragment="content">
+  <div class="container-fluid col-md-10">
+    <h2>로그</h2>
+    <p>로그 페이지 입니다.</p>
+  </div>
+</main>
 </body>
 </html>
