--- a/src/main/resources/templates/form/layout.html
+++ b/src/main/resources/templates/form/layout.html
@@ -4,8 +4,8 @@
       lang="ko"
       layout:decorate="~{fragments/layout}">
 <body>
-<div layout:fragment="content">
-  <div class="container-fluid">
+<main class="flex-grow-1 px-4 py-4" layout:fragment="content">
+  <div class="container-fluid col-md-10">
     <div class="mb-4">
       <h4 class="fw-bold">Form Layout</h4>
     </div>
@@ -49,6 +49,6 @@
       </div>
     </div>
   </div>
-</div>
+</main>
 </body>
 </html>
