--- a/src/main/resources/templates/form/element.html
+++ b/src/main/resources/templates/form/element.html
@@ -4,10 +4,10 @@
       lang="ko"
       layout:decorate="~{fragments/layout}">
 <body>
-<div layout:fragment="content">
-  <div class="container-fluid">
+<main class="flex-grow-1 px-4 py-4" layout:fragment="content">
+  <div class="container-fluid col-md-10">
     <div class="mb-4">
-      <h4 class="fw-bold">Form Elements</h4>
+      <h4 class="fw-bold">Form Element</h4>
     </div>
 
     <div class="row">
@@ -105,6 +105,6 @@
       </div>
     </div>
   </div>
-</div>
+</main>
 </body>
 </html>
