--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,3 +1,3 @@
-<div class="text-center py-3 border-top" th:fragment="footer">
+<footer class="text-center py-3" th:fragment="footer">
     <small>&copy; 2025 Admin System</small>
-</div>
+</footer>
