--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -1,8 +1,22 @@
 <head th:fragment="head">
     <meta charset="UTF-8">
     <title>Admin Page</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
+
+    <!-- Bootstrap & Icons -->
+    <link href="/css/bootstrap/5.3.2/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap/icons/1.11.1/bootstrap-icons.css" rel="stylesheet">
+
+    <!-- DataTables CSS -->
+    <link href="/css/dataTables/dataTables.bootstrap5.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
     <link href="/css/main.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- jQuery 먼저 -->
+    <script src="/js/jQuery/jquery-3.7.1.min.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="/js/bootstrap/5.3.2/bootstrap.bundle.min.js"></script>
+    <!-- DataTables JS -->
+    <script src="/js/dataTables/1.13.6/jquery.dataTables.min.js"></script>
+    <script src="/js/dataTables/1.13.6/dataTables.bootstrap5.min.js"></script>
 </head>
